--- a/predict_credit_card_default_notebook.ipynb
+++ b/predict_credit_card_default_notebook.ipynb
@@ -78,8 +78,6 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "# from scipy import stats\n",
-    "# import itertools\n",
     "from collections import Counter\n",
     "\n",
     "# Visualization\n",
@@ -160,7 +158,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -735,7 +735,7 @@
     "factor_df = df[df.select_dtypes(include=['object']).columns.tolist()]\n",
     "factor_df = pd.get_dummies(factor_df)\n",
     "\n",
-    "# Join the dummifie variables to the main df\n",
+    "# Join the dummified variables to the main df\n",
     "df = pd.concat([df, factor_df], \n",
     "               axis=1, \n",
     "               copy=False)\n",
@@ -1864,7 +1864,7 @@
     }
    ],
    "source": [
-    "#H2O Auto ML\n",
+    "# H2O Auto ML\n",
     "\n",
     "# Start an H2O virtual cluster\n",
     "h2o.init() \n",
@@ -1890,7 +1890,7 @@
     "values = train.values\n",
     "features_names = train.columns.values.tolist()\n",
     "\n",
-    "# Dataframe to H2o frame\n",
+    "# Dataframe to H2O frame\n",
     "hf = h2o.H2OFrame(train.values)\n",
     "hf.set_names(features_names)\n",
     "\n",
@@ -3288,7 +3288,7 @@
    "source": [
     "### Model conclusions\n",
     "\n",
-    "We can see that the AUC of the train set is 0.74 while the one in the cross-validated data is 0.72. From this we can extrapolate that the stacked ensabmle from all models can scale pretty well to unseen data. Hence, we will be using this one for the final submission."
+    "We can see that the AUC of the train set is 0.74 while the one in the cross-validated data is 0.72. From this we can extrapolate that the stacked ensabmle from all models can scale pretty well to unseen data. Hence, we will be using this model for the final submission."
    ]
   },
   {
